<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/fragmentMain">

    <fragment
        android:id="@+id/fragmentMain"
        android:name="com.paget96.drinkwaterreminder.fragments.FragmentMain"
        android:label="@string/home"
        tools:layout="@layout/fragment_main" />

    <fragment
        android:id="@+id/fragmentHistory"
        android:name="com.paget96.drinkwaterreminder.fragments.FragmentHistory"
        android:label="@string/history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/fragmentOther"
        android:name="com.paget96.drinkwaterreminder.fragments.FragmentOther"
        android:label="@string/other"
        tools:layout="@layout/fragment_other" />

</navigation>