<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingStart="@dimen/page_start_end_padding"
            android:paddingTop="@dimen/page_top_padding"
            android:paddingEnd="@dimen/page_start_end_padding"
            android:paddingBottom="72dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/ic_launcher_round" />

                <TextView
                    style="@style/TitleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/app_name" />

                <TextView
                    android:id="@+id/version_name"
                    style="@style/PrimaryText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="0dp"
                    android:text="@string/unknown" />

                <TextView
                    style="@style/SecondaryText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="0dp"
                    android:text="@string/app_package" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/invite_friends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/invite_friends"
                app:icon="@drawable/ic_invite" />

            <include
                layout="@layout/layout_divider"
                android:layout_width="128dp"
                android:layout_height="8dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp" />

            <TextView
                style="@style/DividerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/credits"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:src="@drawable/paget96" />

                    <TextView
                        style="@style/DividerText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/paget" />

                    <TextView
                        style="@style/SecondaryText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/paget_summary" />

                    <include
                        layout="@layout/layout_divider"
                        android:layout_width="128dp"
                        android:layout_height="4dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp" />

                    <TextView
                        style="@style/SummaryText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/paget_hint" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                style="@style/DividerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/application"
                android:textSize="24sp" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/betaVersion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:foreground="?android:attr/selectableItemBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="24dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_beta" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/beta_version"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <include
                        layout="@layout/layout_divider"
                        android:layout_width="match_parent"
                        android:layout_height="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/beta_version_text" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/changelog"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:foreground="?android:attr/selectableItemBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="24dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_changelog" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/changelog"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <include
                        layout="@layout/layout_divider"
                        android:layout_width="match_parent"
                        android:layout_height="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/changelog_text" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/translation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:foreground="?android:attr/selectableItemBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="24dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_translate" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/translation"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <include
                        layout="@layout/layout_divider"
                        android:layout_width="match_parent"
                        android:layout_height="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/translation_text" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>